# tagman

./: .gitignore  LICENSE.md  README.md
bridge/: CMakeLists.txt  FLASHING.md  WIFI-SETUP.md  bridge-setup.sh  sdkconfig.defaults
bridge/main/: CMakeLists.txt  ble_push.c  bridge.h  httpserver.c  idf_component.yml  main.c  wifi.c
service/: Containerfile  go.mod  go.sum
service/cmd/inktags/: main.go
service/cmd/inktags/web/templates/: index.html
service/internal/clover/: clover.go  source.go
service/internal/items/: fake.go  items.go  poller.go  poller_test.go
service/internal/render/: font.go  render.go  render_test.go  schema.go
service/internal/store/: bridges.go  store.go
service/internal/transport/: netbridge.go  router.go  transport.go
service/internal/web/: queue.go  web.go  web_test.go
